<resources>
    //Login
    <string name="app_name">Wheaty</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="login_click_here">Click here</string>
    <string name="register">Don\'t have an account?</string>
    //Register
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="register_create_account">Create Account</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_message_login">Confirm Logout?</string>
    <string name="dialog_positive_login">Yes</string>
    <string name="dialog_negative_login">No</string>

    <string name="dialog_message_gps">Can\'t find your location!</string>
    <string name="dialog_positive_gps">Okay</string>

    //bottom nav
    <string name="temp">Temperature</string>
    <string name="forec">Forecast</string>

    //menu drawer
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="contact">Contact</string>
    <string name="email">Email Us</string>

    //FragTEmp
    <string name="lastUpdate">Last update:</string>
    <string name="windSpeed">Speed:</string>

</resources>
