<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".LogInActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:src="@drawable/wheaty"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="115dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_marginTop="110dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:lottie_fileName="2594-a-simple-sun-day.json"
            app:lottie_loop="false"
            app:lottie_autoPlay="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edit_text"
        android:hint="@string/login_email"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="370dp"
        android:nextFocusDown="@id/password"/>

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/email_icon"
        android:layout_marginTop="375dp"
        android:layout_marginLeft="40dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edit_text"
        android:textSize="16dp"
        android:textStyle="bold"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="430dp"
        android:nextFocusDown="@id/sign_in"/>

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/password_icon"
        android:layout_marginTop="435dp"
        android:layout_marginLeft="40dp"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="490dp"
        android:layout_marginLeft="140dp"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="350dp"
        android:layout_height="62dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="530dp"
        android:layout_marginBottom="625dp"
        android:text="@string/login_sign_in"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/round_button" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="600dp"
    android:layout_marginLeft="60dp">

    <TextView
        android:layout_width="180dp"
        android:layout_height="20dp"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/register"/>

    <Button
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/login_click_here" />
</LinearLayout>

</RelativeLayout>