<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background2"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:src="@drawable/wheaty"
            android:layout_marginTop="-20dp"
            android:layout_marginLeft="115dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/first_name_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/account_icon"/>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/register_first_name"
                android:inputType="textPersonName"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:nextFocusDown="@id/last_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/last_name_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/account_icon"
                />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/register_last_name"
                android:inputType="textPersonName"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:nextFocusDown="@id/email"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/email_icon"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/register_email"
                android:inputType="textPersonName"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:nextFocusDown="@id/password"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="390dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/password_icon"
                />

            <EditText
                android:id="@+id/password"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:nextFocusDown="@id/confirm_password"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="470dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/confirm_password_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/password_icon"
                />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:background="@drawable/round_edit_text"
                android:hint="@string/register_password_confirm"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:nextFocusDown="@id/register"/>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="350dp"
            android:layout_height="62dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="550dp"
            android:layout_marginBottom="15dp"
            android:text="@string/register_create_account"
            android:textSize="20dp"
            android:textStyle="bold"
            android:background="@drawable/round_button" />


    </RelativeLayout>
</ScrollView>